# foogle

./: .gitignore  Cargo.toml  README.md  index.html  index.js  index.json
src/: main.rs  model.rs  server.rs
