[package]
name = "foogle"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "foogle"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.94"
tiny_http = "0.12.0"
xml-rs = "0.8.4"
